# signstar

./: .codespellrc  .env  .gitignore  .gitlab-ci.yml  .lycheeignore  .shellcheckrc  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  cargo-maelstrom.toml  clippy.toml  deny.toml  justfile  lychee.toml  mado.toml  release-plz.toml  renovate.json  rustfmt.toml  taplo.toml
nethsm/: CHANGELOG.md  Cargo.toml  README.md
nethsm-backup/: CHANGELOG.md  Cargo.toml  README.md
nethsm-backup/src/: lib.rs
nethsm-backup/tests/: backup-decrypt.rs  nethsm.rs
nethsm-cli/: CHANGELOG.md  Cargo.toml  README.md
nethsm-cli/src/: cli.rs  config.rs  lib.rs  main.rs  passphrase_file.rs  prompt.rs
nethsm-cli/src/cli/: config.rs  env.rs  health.rs  info.rs  key.rs  lock.rs  metrics.rs  namespace.rs  openpgp.rs  provision.rs  random.rs  system.rs  unlock.rs  user.rs
nethsm-config/: CHANGELOG.md  Cargo.toml  README.md
nethsm-config/src/: config.rs  credentials.rs  lib.rs  mapping.rs  prompt.rs
nethsm-tests/: CHANGELOG.md  Cargo.toml  README.md
nethsm-tests/src/: container.rs  lib.rs
nethsm/src/: backup.rs  connection.rs  error.rs  key.rs  lib.rs  nethsm_sdk.rs  openpgp.rs  openpgp_nethsm.rs  signer.rs  test.rs  tls.rs  user.rs
nethsm/src/base/: impl_base.rs  impl_key.rs  impl_noauth.rs  impl_openpgp.rs  impl_system.rs  impl_user.rs  mod.rs  utils.rs
nethsm/src/openpgp/: signer.rs
nethsm/src/test/: container.rs
nethsm/tests/: certificates.rs  config.rs  containerized-tests.rs  encryption.rs  health.rs  keys.rs  locking.rs  metrics.rs  namespace.rs  nethsm.rs  provisioning.rs  random.rs  signing.rs  system.rs  users.rs
nethsm/tests/certificates/: mod.rs
nethsm/tests/common/: container.rs  mod.rs
nethsm/tests/encryption/: mod.rs
nethsm/tests/integration/: certificates.rs  config.rs  health.rs  keys.rs  locking.rs  mod.rs  namespace.rs  random.rs  system.rs
nethsm/tests/keys/: mod.rs
nethsm/tests/metrics/: mod.rs
nethsm/tests/provisioning/: mod.rs
nethsm/tests/signing/: mod.rs
nethsm/tests/users/: mod.rs
signstar-common/: CHANGELOG.md  Cargo.toml  README.md
signstar-common/src/: admin_credentials.rs  cli.rs  common.rs  config.rs  error.rs  lib.rs  logging.rs  nethsm.rs  ssh.rs  system_user.rs
signstar-config/: CHANGELOG.md  Cargo.toml  README.md
signstar-config/examples/: config-non-admin-backend-user-secrets.rs  get-nethsm-credentials.rs  usermapping-non-admin-secrets.rs  usermapping-system-user-info.rs
signstar-config/src/: admin_credentials.rs  config.rs  error.rs  lib.rs  nethsm.rs  nethsm_config.rs  non_admin_credentials.rs  state.rs  test.rs  utils.rs
signstar-config/src/config/: base.rs  credentials.rs  error.rs  mapping.rs  mod.rs  system.rs  traits.rs  utils.rs
signstar-config/src/nethsm/: admin_credentials.rs  backend.rs  config.rs  error.rs  mod.rs  state.rs
signstar-config/src/yubihsm2/: admin_credentials.rs  backend.rs  config.rs  mod.rs
signstar-config/tests/: admin_credentials.rs  integration.rs  nethsm.rs  nethsm_config.rs  non_admin_credentials.rs
signstar-config/tests/admin_credentials/: mod.rs  nethsm.rs  yubihsm2.rs
signstar-config/tests/admin_credentials_multi/: mod.rs
signstar-config/tests/admin_credentials_single/: mod.rs
signstar-config/tests/config/: mod.rs
signstar-config/tests/fixtures/: admin-creds-simple.toml  signstar-config-full.toml  signstar-config-plaintext.toml
signstar-config/tests/nethsm/: mod.rs
signstar-config/tests/nethsm_backend/: mod.rs
signstar-config/tests/nethsm_config/: mod.rs
signstar-config/tests/nethsm_config_single/: mod.rs
signstar-config/tests/non_admin_credentials/: mod.rs
signstar-config/tests/non_admin_credentials_single/: mod.rs
signstar-config/tests/usermapping/: mod.rs
signstar-config/tests/utils/: mod.rs
signstar-configure/: Cargo.toml  README.md
signstar-configure-build/: CHANGELOG.md  Cargo.toml  README.md
signstar-configure-build/src/: cli.rs  lib.rs  main.rs
signstar-configure-build/tests/fixtures/: example.toml
signstar-configure/src/: main.rs
signstar-core/: Cargo.toml  README.md
signstar-core/src/: admin_credentials.rs  common.rs  config.rs  lib.rs  nethsm.rs  ssh.rs  system_user.rs
signstar-crypto/: Cargo.toml  README.md
signstar-crypto/examples/: load-non-admin-secret.rs
signstar-crypto/src/: error.rs  lib.rs  openpgp.rs  passphrase.rs  signer.rs  test.rs
signstar-crypto/src/key/: error.rs  mod.rs  setup.rs
signstar-crypto/src/secret_file/: admin.rs  common.rs  error.rs  mod.rs  non_admin.rs
signstar-crypto/src/signer/: error.rs  mod.rs  openpgp.rs  traits.rs
signstar-crypto/src/traits/: mod.rs
signstar-crypto/tests/: integration.rs
signstar-crypto/tests/secret_file/: mod.rs
signstar-request-signature/: CHANGELOG.md  Cargo.toml  README.md  run.sh
signstar-request-signature/doc/: design.md
signstar-request-signature/resources/doc/: design.md
signstar-request-signature/resources/docs/: design.md  request.md  response.md
signstar-request-signature/src/: cli.rs  config.rs  lib.rs  main.rs  ssh.rs
signstar-request-signature/src/ssh/: client.rs  known_hosts.rs
signstar-request-signature/tests/: agent.rs  bad-no-req-input.json  bad-no-req-output.json  bad-no-required-dict.json  bad-not-json.json  bad-req-input-content-wrong-type.json  bad-unknown-type.json  sample-request.json  ssh-roundtrip.rs
signstar-request-signature/tests/sshd/: 10-signstar-sign.conf  Containerfile  signstar-sign
signstar-sign/: CHANGELOG.md  Cargo.toml  README.md
signstar-sign/src/: cli.rs  lib.rs  main.rs
signstar-sign/tests/: integration.rs
signstar-sign/tests/utils/: mod.rs
signstar-state/: Cargo.toml  README.md
signstar-state/src/: admin_credentials.rs  config.rs  lib.rs  state.rs
signstar-test/: Cargo.toml  README.md
signstar-test/src/: lib.rs
signstar-yubihsm/: Cargo.toml  README.md
signstar-yubihsm/src/: error.rs  lib.rs  main.rs  signing.rs
signstar-yubihsm2/: Cargo.toml  README.md
signstar-yubihsm2/src/: automation.rs  backup.rs  connection.rs  error.rs  lib.rs  main.rs  object.rs  signer.rs  signing.rs  user.rs
(+361 files in other folders)
