[workspace]
resolver = "2"
members = [
  "nethsm",
  "nethsm-cli",
  "nethsm-config",
  "nethsm-tests",
  "signstar-configure-build",
]

[workspace.dependencies]
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive", "env"] }
ed25519-dalek = "2.1.1"
nethsm = { path = "nethsm", version = "0.7.0" }
nethsm-config = { path = "nethsm-config", version = "0.2.0" }
rand = "0.8.5"
rsa = "0.9.6"
rstest = "0.23.0"
serde = { version = "1.0.215", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
testdir = "0.9.1"
testresult = "0.4.1"
thiserror = "2.0.3"

[workspace.package]
authors = [
  "David Runge <dvzrv@archlinux.org>",
  "Wiktor Kwapisiewicz <wiktor@archlinux.org>",
]
edition = "2021"
homepage = "https://gitlab.archlinux.org/archlinux/signstar"
license = "Apache-2.0 OR MIT"
repository = "https://gitlab.archlinux.org/archlinux/signstar"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
