[workspace]
resolver = "3"
members = [
  "nethsm",
  "nethsm-backup",
  "nethsm-cli",
  "nethsm-config",
  "nethsm-tests",
  "signstar-configure-build",
  "signstar-config",
  "signstar-core",
  "signstar-request-signature",
]

[workspace.dependencies]
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive", "env"] }
confy = "0.6.1"
ed25519-dalek = "2.1.1"
nethsm = { path = "nethsm", version = "0.7.3" }
nethsm-backup = { path = "nethsm-backup", version = "0.1.0" }
nethsm-config = { path = "nethsm-config", version = "0.2.2" }
nethsm-tests = { path = "nethsm-tests", version = "0.1.2" }
rand = "0.8.5"
rsa = "0.9.7"
rstest = "0.25.0"
rustainers = "0.15"
serde = { version = "1.0.215", features = ["derive"] }
# Updating this dependency directly here is breaking change in signstar-request-signature.
# To do it in a non-breaking way the library needs to support the old version too.
# Cargo.toml allows using two incompatible versions of the library:
# old_sha2 = { package = "sha2", version = "=0.11.0-pre.1" }
# Then adjust the tests in signstar-request-signature/src/lib.rs to additionally test
# inputs that reference the "old_sha2".
sha2 = "0.11.0-pre.4"
signstar-core = { path = "signstar-core", version = "0.1.0" }
signstar-request-signature = { path = "signstar-request-signature", version = "0.1.0" }
strum = { version = "0.26.3", features = ["derive"] }
testdir = "0.9.3"
testresult = "0.4.1"
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["macros"] }
ureq = "2.12.1"
uuid = { version = "1.11.0", features = ["v7"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive", "serde"] }

[workspace.package]
authors = [
  "David Runge <dvzrv@archlinux.org>",
  "Wiktor Kwapisiewicz <wiktor@archlinux.org>",
]
edition = "2024"
homepage = "https://gitlab.archlinux.org/archlinux/signstar"
license = "Apache-2.0 OR MIT"
repository = "https://gitlab.archlinux.org/archlinux/signstar"
rust-version = "1.85.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

# Enable optimizations for crates that are extremely slow unoptimized
# scrypt opt-level provides 30x increase of performance, while aes-gcm 2x
[profile.dev.package.scrypt]
opt-level = 3

[profile.dev.package.aes-gcm]
opt-level = 3
