[package]
name = "nethsm-backup"
version = "0.1.0"
description = "A library and binary for working with encrypted NetHSM backups"
keywords = ["encryption", "hsm", "nethsm", "backup"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = "0.10.3"
scrypt = "0.11.0"
thiserror.workspace = true

[dev-dependencies]
nethsm = { path = "../nethsm" }
nethsm-tests = { path = "../nethsm-tests" }
rstest.workspace = true
rustainers = "0.13.1"
testdir.workspace = true
testresult = "0.4.1"
tokio = { version = "1.41.0", features = ["macros"] }
