[package]
name = "nethsm-backup"
version = "0.1.0"
description = "A library and binary for working with encrypted NetHSM backups"
keywords = ["encryption", "hsm", "nethsm", "backup"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = "0.10.3"
log = "0.4.27"
scrypt = "0.11.0"
thiserror.workspace = true

[dev-dependencies]
nethsm.workspace = true
nethsm-tests.workspace = true
rstest.workspace = true
rustainers.workspace = true
testdir.workspace = true
testresult.workspace = true
tokio.workspace = true

[lints]
workspace = true