[package]
name = "nethsm-backup"
version = "0.2.0"
description = "A library and binary for working with encrypted NetHSM backups"
keywords = ["backup", "encryption", "hsm", "nethsm"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = "0.10.3"
log.workspace = true
scrypt = "0.11.0"
signstar-crypto = { version = "0.1.0", path = "../signstar-crypto" }
thiserror.workspace = true

[dev-dependencies]
nethsm = { features = ["test-helpers"], workspace = true }
rstest.workspace = true
rustainers.workspace = true
testdir.workspace = true
testresult.workspace = true
tokio.workspace = true

[lints]
workspace = true

[features]
_nethsm-integration-test = []
