[package]
authors.workspace = true
description = "A CLI for the Nitrokey NetHSM"
edition.workspace = true
homepage.workspace = true
keywords = ["encryption", "hsm", "nethsm", "signing", "cli"]
license.workspace = true
name = "nethsm-cli"
repository.workspace = true
version = "0.3.0"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive", "env"] }
expression_format = "1.1.3"
nethsm = { path = "../nethsm", version = "0.6.0" }
nethsm-config = { path = "../nethsm-config", version = "0.1.1" }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"

[[bin]]
name = "nethsm"
path = "src/main.rs"

[dev-dependencies]
rand = "0.8.5"
rstest = "0.23.0"
testdir = "0.9.1"
testresult = "0.4.1"
