[package]
authors.workspace = true
description = "A CLI for the Nitrokey NetHSM"
edition.workspace = true
homepage.workspace = true
keywords = ["encryption", "hsm", "nethsm", "signing", "cli"]
license.workspace = true
name = "nethsm-cli"
repository.workspace = true
version = "0.4.0"

[dependencies]
chrono.workspace = true
clap.workspace = true
expression_format = "1.1.3"
nethsm.workspace = true
nethsm-config.workspace = true
strum.workspace = true
thiserror.workspace = true

[[bin]]
name = "nethsm"
path = "src/main.rs"

[dev-dependencies]
rand.workspace = true
rstest.workspace = true
testdir.workspace = true
testresult.workspace = true
