[package]
authors.workspace = true
description = "A library for working with application configuration files for Nitrokey NetHSM devices"
edition.workspace = true
homepage.workspace = true
keywords = ["encryption", "hsm", "nethsm", "signing"]
license.workspace = true
name = "nethsm-config"
repository.workspace = true
version = "0.2.1"

[dependencies]
confy = "0.6.1"
nethsm.workspace = true
rpassword = "7.3.1"
rprompt = "2.1.1"
serde.workspace = true
ssh-key = "0.6.7"
thiserror.workspace = true
zeroize = { version = "1.8.1", features = ["zeroize_derive", "serde"] }

[dev-dependencies]
dirs = "5.0.1"
rstest.workspace = true
testdir.workspace = true
testresult.workspace = true
