[package]
authors.workspace = true
description = "A library for working with application configuration files for Nitrokey NetHSM devices"
edition.workspace = true
homepage.workspace = true
keywords = ["encryption", "hsm", "nethsm", "signing"]
license.workspace = true
name = "nethsm-config"
repository.workspace = true
version = "0.5.0"

[dependencies]
confy.workspace = true
nethsm.workspace = true
rpassword = "7.3.1"
rprompt = "2.1.1"
serde.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
dirs = "6.0.0"
rstest.workspace = true
testdir.workspace = true
testresult.workspace = true

[lints]
workspace = true
