[package]
name = "nethsm-tests"
description = "Containerized testing environments for NetHSM related projects"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
nethsm.workspace = true
rstest.workspace = true
rustainers.workspace = true
testresult.workspace = true
ureq.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
