[package]
authors.workspace = true
description = "A high-level library to interact with the API of a Nitrokey NetHSM"
edition.workspace = true
homepage.workspace = true
keywords = ["encryption", "hsm", "nethsm", "signing"]
license.workspace = true
name = "nethsm"
repository.workspace = true
version = "0.7.3"

[package.metadata.cargo-machete]
ignored = ["md-5"]

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc", "std"] }
chrono = { workspace = true, features = ["alloc"] }
ed25519-dalek = { workspace = true, features = ["pkcs8", "pem"] }
email_address = "0.2.9"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.22"
md-5 = "0.10.6"
nethsm-backup.workspace = true
nethsm-sdk-rs = "1.1.1"
p224 = { version = "0.13.2", features = ["pem", "pkcs8"] }
p256 = { version = "0.13.2", features = ["pem", "pkcs8"] }
p384 = { version = "0.13.0", features = ["pem", "pkcs8"] }
p521 = { version = "0.13.3", features = ["pem", "pkcs8"] }
pgp = "0.15"
picky-asn1-der = "0.5.1"
picky-asn1-x509 = "0.14.1"
rand.workspace = true
rsa = { workspace = true, features = ["pem"] }
rustls = { version = "0.23.19" }
rustls-native-certs = "0.8.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde.workspace = true
serde_json = "1.0.133"
sha1 = "0.10.6"
sha2.workspace = true
strum.workspace = true
thiserror.workspace = true
ureq = { workspace = true, features = ["json"] }
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["pkcs8", "pem", "rand_core"] }
nethsm-tests.workspace = true
rsa = { workspace = true, features = ["getrandom", "sha2", "pem"] }
rstest.workspace = true
rustainers.workspace = true
testdir.workspace = true
testresult.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
