[package]
authors.workspace = true
description = "A high-level library to interact with the API of a Nitrokey NetHSM"
edition.workspace = true
homepage.workspace = true
keywords = ["encryption", "hsm", "nethsm", "signing"]
license.workspace = true
name = "nethsm"
repository.workspace = true
version = "0.10.0"

[package.metadata.cargo-machete]
ignored = ["md-5"]

[dependencies]
base64ct.workspace = true
chrono = { workspace = true, features = ["alloc"] }
digest = { version = "0.10.7", features = ["alloc"] }
ed25519-dalek = { workspace = true, features = ["pem", "pkcs8"] }
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.22"
md-5 = "0.10.6"
nethsm-sdk-rs.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
pgp.workspace = true
picky-asn1-der = "0.5.1"
picky-asn1-x509 = "0.14.1"
rand.workspace = true
rsa = { workspace = true, features = ["pem"] }
rstest = { optional = true, workspace = true }
rust_dotenv = { optional = true, version = "0.1.2" }
rustainers = { optional = true, workspace = true }
rustls = { version = "0.23.19" }
rustls-native-certs = "0.8.1"
serde.workspace = true
serde_json = "1.0.133"
sha1 = "0.10.6"
sha2.workspace = true
signstar-crypto = { version = "0.1.0", path = "../signstar-crypto", features = [
    "nethsm",
] }
strum.workspace = true
testresult = { optional = true, workspace = true }
thiserror.workspace = true
ureq = { workspace = true, features = ["json"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { optional = true, workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["pem", "pkcs8", "rand_core"] }
rsa = { workspace = true, features = ["getrandom", "pem", "sha2"] }
rstest.workspace = true
rustainers.workspace = true
testdir.workspace = true
testresult.workspace = true
tokio.workspace = true
uuid.workspace = true

[features]
_nethsm-integration-test = ["test-helpers"]
default = []
test-helpers = [
    "dep:rstest",
    "dep:rust_dotenv",
    "dep:rustainers",
    "dep:testresult",
    "dep:uuid",
]

[lints]
workspace = true
