[package]
authors.workspace = true
description = "Common components for Signstar libraries and command-line interfaces"
edition.workspace = true
homepage.workspace = true
keywords = ["user", "signstar", "nethsm"]
license.workspace = true
name = "signstar-common"
repository.workspace = true
version = "0.1.0"

[dependencies]
log = { optional = true, workspace = true }
nethsm.workspace = true
simple_logger = { features = ["stderr"], optional = true, version = "5.0.0" }
systemd-journal-logger = { optional = true, version = "2.2.1" }
thiserror.workspace = true

[features]
cli = [ "dep:log", "dep:simple_logger", "dep:systemd-journal-logger" ]
