[package]
authors.workspace = true
description = "Common components for Signstar libraries and command-line interfaces"
edition.workspace = true
homepage.workspace = true
keywords = ["nethsm", "signstar", "user"]
license.workspace = true
name = "signstar-common"
repository.workspace = true
version = "0.1.0"

[dependencies]
nethsm.workspace = true
thiserror.workspace = true
