[package]
authors.workspace = true
description = "Common components for Signstar libraries and command-line interfaces"
edition.workspace = true
homepage.workspace = true
keywords = ["nethsm", "signstar", "user"]
license.workspace = true
name = "signstar-common"
repository.workspace = true
version = "0.1.2"

[dependencies]
log.workspace = true
simplelog = { optional = true, version = "0.12.2" }
systemd-journal-logger = { optional = true, version = "2.2.1" }
thiserror.workspace = true

[features]
logging = ["dep:simplelog", "dep:systemd-journal-logger"]

[lints]
workspace = true
