[package]
authors.workspace = true
description = "Configuration file handling for Signstar hosts"
edition.workspace = true
homepage.workspace = true
keywords = ["host", "hsm", "signstar"]
license.workspace = true
name = "signstar-config"
repository.workspace = true
version = "0.2.0"

[[example]]
name = "get-nethsm-credentials"
required-features = ["nethsm"]

[dependencies]
garde = { version = "0.22.1", features = ["derive"] }
log.workspace = true
nethsm = { workspace = true, optional = true }
nix.workspace = true
num_enum = "0.7.3"
pgp.workspace = true
rand.workspace = true
serde.workspace = true
serde-saphyr = "0.0.16"
signstar-common.workspace = true
signstar-crypto = { version = "0.1.0", path = "../signstar-crypto" }
signstar-yubihsm2 = { version = "0.1.0", path = "../signstar-yubihsm2", optional = true }
ssh-key = "0.6.7"
strum.workspace = true
tempfile = { workspace = true, optional = true }
testresult = { workspace = true, optional = true }
thiserror.workspace = true
toml = "0.9.0"
which = "8.0.0"
zeroize.workspace = true

[dev-dependencies]
change-user-run.workspace = true
insta = "1.46.1"
nethsm = { features = ["test-helpers"], workspace = true }
rstest.workspace = true
signstar-common = { workspace = true, features = ["logging"] }
tempfile.workspace = true
testdir.workspace = true
testresult.workspace = true
tokio.workspace = true

[features]
_containerized-integration-test = [
    "_integration-test",
    "nethsm",
    "test-helpers",
]
# Dummy feature, indicating that at least one HSM backend is compiled in.
_hsm-backend = []
_integration-test = ["test-helpers"]
_nethsm-integration-test = ["_integration-test", "nethsm", "test-helpers"]
default = ["nethsm"]
# Support for the NetHSM backend.
nethsm = ["_hsm-backend", "dep:nethsm"]
test-helpers = ["dep:tempfile", "dep:testresult", "nethsm"]
# Support for the YubiHSM2 backend.
yubihsm2 = ["_hsm-backend", "dep:signstar-yubihsm2"]

[lints]
workspace = true
