[package]
authors.workspace = true
description = "Configuration file handling for Signstar hosts"
edition.workspace = true
homepage.workspace = true
keywords = ["host", "hsm", "signstar"]
license.workspace = true
name = "signstar-config"
repository.workspace = true
version = "0.2.0"

[dependencies]
change-user-run = { workspace = true, optional = true }
garde = { version = "0.22.1", features = ["derive"] }
log.workspace = true
nethsm = { workspace = true, optional = true }
nix.workspace = true
num_enum = "0.7.3"
pgp.workspace = true
rand.workspace = true
serde.workspace = true
serde-saphyr = "0.0.16"
signstar-common.workspace = true
signstar-crypto = { version = "0.1.0", path = "../signstar-crypto" }
signstar-yubihsm2 = { version = "0.1.0", path = "../signstar-yubihsm2", optional = true }
ssh-key = "0.6.7"
strum.workspace = true
tempfile = { workspace = true, optional = true }
testresult = { workspace = true, optional = true }
thiserror.workspace = true
toml = "1.0.0"
which = "8.0.0"
zeroize.workspace = true

[dev-dependencies]
change-user-run.workspace = true
clap.workspace = true
insta = { version = "1.46.1", features = ["filters"] }
nethsm = { features = ["_test-helpers"], workspace = true }
pretty_assertions = "1.4.1"
rstest.workspace = true
signstar-common = { workspace = true, features = ["logging"] }
simplelog.workspace = true
tempfile.workspace = true
testdir.workspace = true
testresult.workspace = true
tokio.workspace = true

[features]
_containerized-integration-test = ["_test-helpers"]
_nethsm-integration-test = ["_test-helpers", "nethsm"]
_test-helpers = ["dep:change-user-run", "dep:tempfile", "dep:testresult"]
_yubihsm2-mockhsm = ["signstar-yubihsm2/_yubihsm2-mockhsm", "yubihsm2"]
default = []
# Support for the NetHSM backend.
nethsm = ["dep:nethsm"]
# Support for the YubiHSM2 backend.
yubihsm2 = ["dep:signstar-yubihsm2", "signstar-yubihsm2/serde"]

[lints]
workspace = true
