[package]
authors.workspace = true
description = "A command-line interface for Signstar image build configuration"
edition.workspace = true
homepage.workspace = true
keywords = ["cli", "nethsm", "signstar", "user"]
license.workspace = true
name = "signstar-configure-build"
repository.workspace = true
version = "0.2.0"

[dependencies]
clap = { workspace = true, features = ["cargo", "derive", "env"] }
nethsm-config.workspace = true
nix = { version = "0.30.0", features = ["user"] }
signstar-common.workspace = true
strum.workspace = true
sysinfo = "0.36.0"
thiserror.workspace = true
