[package]
authors.workspace = true
description = "A command-line interface for Signstar image build configuration"
edition.workspace = true
homepage.workspace = true
keywords = ["cli", "nethsm", "signstar", "user"]
license.workspace = true
name = "signstar-configure-build"
repository.workspace = true
version = "0.3.0"

[dependencies]
clap = { workspace = true, features = ["cargo", "derive", "env"] }
nix = { version = "0.31.0", features = ["user"] }
signstar-common.workspace = true
signstar-config.workspace = true
strum.workspace = true
sysinfo = "0.38.0"
thiserror.workspace = true

[features]
default = []
yubihsm2 = ["signstar-config/yubihsm2"]

[lints]
workspace = true
