[package]
authors.workspace = true
description = "A command-line interface for Signstar image build configuration"
edition.workspace = true
homepage.workspace = true
keywords = ["cli", "nethsm", "signstar", "user"]
license.workspace = true
name = "signstar-configure-build"
repository.workspace = true
version = "0.3.0"

[dependencies]
clap = { workspace = true, features = ["cargo", "derive", "env"] }
log.workspace = true
nix.workspace = true
signstar-common.workspace = true
signstar-config.workspace = true
strum.workspace = true
sysinfo = "0.38.0"
thiserror.workspace = true

[features]
_yubihsm2-mockhsm = ["yubihsm2"]
default = []
nethsm = ["signstar-config/nethsm"]
yubihsm2 = ["signstar-config/yubihsm2"]

[lints]
workspace = true
