[package]
authors.workspace = true
description = "Common types for cryptography in Signstar"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "signstar-crypto"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
email_address = "0.2.9"
log.workspace = true
pgp.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
testresult.workspace = true

[lints]
workspace = true
