[package]
authors.workspace = true
description = "Common types for cryptography in Signstar"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "signstar-crypto"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
base64ct = { workspace = true, optional = true }
change-user-run.workspace = true
digest = { version = "0.10.7", features = ["alloc"] }
ed25519-dalek = { workspace = true, features = ["pem", "pkcs8"] }
email_address = "0.2.9"
log.workspace = true
nethsm-sdk-rs = { workspace = true, optional = true }
nix.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
pgp.workspace = true
rand.workspace = true
rsa.workspace = true
secrecy = { version = "0.10.3", features = ["serde"] }
serde.workspace = true
sha2.workspace = true
signstar-common.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
rstest.workspace = true
signstar-common = { workspace = true, features = ["logging"] }
tempfile.workspace = true
testresult.workspace = true

[features]
_containerized-integration-test = ["_test-helpers"]
_test-helpers = []
nethsm = ["dep:base64ct", "dep:nethsm-sdk-rs"]

[lints]
workspace = true
