[package]
authors.workspace = true
description = "Library and executable for creating, reading and writing of signing requests for files"
edition.workspace = true
homepage.workspace = true
keywords = ["hsm", "nethsm", "signature", "signing", "signstar"]
license.workspace = true
name = "signstar-request-signature"
repository.workspace = true
version = "0.1.2"

[dependencies]
clap.workspace = true
env_logger = "0.11.5"
hmac = { version = "0.12.1", features = ["std"] }
log.workspace = true
rand.workspace = true
russh = { version = "0.53.0" }
semver = { version = "1.0.23", features = ["serde"] }
serde.workspace = true
serde_json = "1.0.125"
sha1 = "0.10.6"
sha2.workspace = true
thiserror.workspace = true
tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
base64 = "0.22.1"
rsa = { workspace = true, features = ["sha1", "sha2"] }
rstest.workspace = true
ssh-agent-lib = "0.5.1"
tempfile = "3.20.0"
testdir.workspace = true
testresult.workspace = true
# old version of the sha2 crate used for backwards-compat tests
#old_sha2 = { package = "sha2", version = "=0.11.0-pre.4", features = ["oid"] }

[lints]
workspace = true
