[package]
authors.workspace = true
description = "Library and executable for creating, reading and writing of signing requests for files"
edition.workspace = true
homepage.workspace = true
keywords = ["hsm", "nethsm", "signature", "signing", "signstar"]
license.workspace = true
name = "signstar-request-signature"
repository.workspace = true
version = "0.1.3"

[dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
hmac = { version = "0.12.1", features = ["std"] }
log.workspace = true
rand.workspace = true
russh = { version = "0.57.0" }
semver = { version = "1.0.23", features = ["serde"] }
serde.workspace = true
serde_json = "1.0.125"
sha1 = "0.10.6"
sha2.workspace = true
signstar-common = { features = ["logging"], workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
base64 = "0.22.1"
rsa = { workspace = true, features = ["sha1", "sha2"] }
rstest.workspace = true
ssh-agent-lib = "0.5.1"
tempfile.workspace = true
testdir.workspace = true
testresult.workspace = true
# old version of the sha2 crate used for backwards-compat tests
#old_sha2 = { package = "sha2", version = "=0.11.0-pre.4", features = ["oid"] }

[lints]
workspace = true
