[package]
name = "signstar-sign"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nethsm.workspace = true
nethsm-config.workspace = true
signstar-config.workspace = true
signstar-request-signature.workspace = true
thiserror.workspace = true

[features]
_containerized-integration-test = []
default = []

[dev-dependencies]
actix-web = { version = "4.10.2", features = ["openssl"] }
base64 = "0.22.1"
env_logger = "0.11.7"
httpmock = "0.8.0-alpha.1"
log.workspace = true
openssl = "0.10.71"
rcgen = "0.14.0"
rstest.workspace = true
signstar-common.workspace = true
signstar-config = { workspace = true, features = ["test-helpers"] }
tempfile = "3.19.1"
testresult.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
which = "8.0.0"

[lints]
workspace = true
