[package]
authors.workspace = true
description = "Signstar signing responses for Signstar signing requests"
edition.workspace = true
homepage.workspace = true
keywords = ["openpgp", "sign", "signstar"]
license.workspace = true
name = "signstar-sign"
repository.workspace = true
rust-version.workspace = true
version = "0.1.1"

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag = "3.0.3"
log.workspace = true
nethsm.workspace = true
signstar-common = { features = ["logging"], workspace = true }
signstar-config.workspace = true
signstar-crypto.workspace = true
signstar-request-signature.workspace = true
signstar-yubihsm2 = { path = "../signstar-yubihsm2", version = "0.1.0" }
thiserror.workspace = true

[features]
_containerized-integration-test = []
default = []
yubihsm2 = ["signstar-config/yubihsm2"]

[dev-dependencies]
actix-web = { version = "4.10.2", features = ["openssl"] }
base64 = "0.22.1"
change-user-run.workspace = true
httpmock = "0.8.0-alpha.1"
log.workspace = true
openssl = "0.10.71"
pgp.workspace = true
rcgen = "0.14.0"
rstest.workspace = true
signstar-common.workspace = true
signstar-config = { workspace = true, features = ["test-helpers"] }
tempfile = "3.19.1"
testresult.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
which = "8.0.0"

[lints]
workspace = true
