[package]
name = "signstar-test"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
nethsm-config.workspace = true
signstar-common.workspace = true
signstar-config.workspace = true
thiserror.workspace = true
tempfile = "3.16.0"
testresult.workspace = true
which = "7.0.2"

[lints]
workspace = true
