[package]
name = "signstar-yubihsm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
signstar-crypto = { path = "../signstar-crypto", version = "0.1.0" }
thiserror.workspace = true
yubihsm = { version = "0.42.1", features = ["http", "mockhsm", "usb"] }

[lints]
workspace = true
